consolidate unit tests

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,7 +5,8 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci # Use ci for potentially faster installs
+# Changed from 'npm ci' to 'npm install' to generate/update package-lock.json if needed
+RUN npm install
 
 # The volume mapping in docker-compose will override this in dev
 COPY . ./
@@ -15,6 +16,21 @@ EXPOSE 3000
 # Use Vite development command
 CMD ["npm", "run", "dev"] 
 
+# Test stage for running tests (unit and e2e)
+FROM node:20-slim as test
+
+WORKDIR /app
+
+COPY package*.json ./
+
+# Changed from 'npm ci' to 'npm install' to ensure dependencies are properly installed
+RUN npm install
+
+COPY . ./
+
+# Default command is to run tests
+CMD ["npm", "run", "test"]
+
 # Build stage for production
 FROM node:20-slim as build 
 
@@ -22,7 +38,8 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm ci
+# Changed from 'npm ci' to 'npm install' to ensure dependencies are properly installed
+RUN npm install
 
 COPY . ./
 
