--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "start:dev": "docker-compose -f docker-compose.dev.yml up --build",
     "stop": "docker-compose -f docker-compose.prod.yml down",
     "stop:dev:": "docker-compose -f docker-compose.dev.yml down",
-    
     "test:unit": "npm run test:client && npm run test:server",
     "test:client": "cd client && npm test",
-    "test:server": "cd server && npm test"
+    "test:server": "cd server && npm test",
+    "test:e2e": "docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from playwright",
+    "test:e2e:clean": "docker-compose -f docker-compose.test.yml down -v",
+    "test": "npm run test:unit && npm run test:e2e"
   },
   "repository": {
     "type": "git",
@@ -34,6 +36,7 @@
   "engines": {
     "node": ">=18.0.0"
   },
-  "devDependencies": {
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
