--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
     "stop:dev:": "docker-compose -f docker-compose.dev.yml down",
     "test:unit": "npm run test:client && npm run test:server",
     "test:client": "cd client && npm test",
-    "test:server": "cd server && npm test",
-    "test:e2e": "docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from playwright",
-    "test:e2e:clean": "docker-compose -f docker-compose.test.yml down -v",
-    "test": "npm run test:unit && npm run test:e2e"
+    "test:server": "cd server && npm test"
   },
   "repository": {
     "type": "git",
