--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,6 +4,8 @@ services:
       context: ./client
       dockerfile: Dockerfile
       target: development
+      args:
+        - VITE_API_URL=http://localhost:5000/api/todos
     volumes:
       - ./client:/app
       - /app/node_modules
@@ -11,7 +13,6 @@ services:
       - "3000:3000"
     environment:
       - CHOKIDAR_USEPOLLING=true
-      - VITE_API_URL=http://server:5000/api/todos
       - VITE_USE_MOCK_API=false  # Explicitly disable mock API in Docker environment
       - NODE_ENV=development
     depends_on:
