--- a/package.json
+++ b/package.json
@@ -5,16 +5,20 @@
   "private": true,
   "workspaces": [
     "client",
-    "server"
+    "server",
+    "e2e"
   ],
   "scripts": {
     "start": "docker-compose -f docker-compose.prod.yml up --build",
     "start:dev": "docker-compose -f docker-compose.dev.yml up --build",
     "stop": "docker-compose -f docker-compose.prod.yml down",
     "stop:dev:": "docker-compose -f docker-compose.dev.yml down",
+    "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "npm run test:client && npm run test:server",
     "test:client": "cd client && npm test",
-    "test:server": "cd server && npm test"
+    "test:server": "cd server && npm test",
+    "test:e2e": "docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from e2e",
+    "test:e2e:cleanup": "docker-compose -f docker-compose.test.yml down -v"
   },
   "repository": {
     "type": "git",
