--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "test": "NODE_ENV=test jest --forceExit --detectOpenHandles --verbose --colors --watchAll=false",
-    "build": "echo 'No build step needed for JS'",
-    "test:docker": "docker-compose -f ../docker-compose.test.yml up --abort-on-container-exit --exit-code-from server-test && docker-compose -f ../docker-compose.test.yml down"
+    "build": "echo 'No build step needed for JS'"
   },
   "dependencies": {
     "cors": "^2.8.5",
