--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,7 +35,10 @@ jobs:
           node-version: '20'
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@
+        
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v1
 
       - name: Run E2E tests
         run: npm run test:e2e
