--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,8 +35,8 @@ jobs:
           node-version: '20'
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@
-        
+        uses: docker/setup-buildx-action@v3
+
       - name: Set up Docker Compose
         uses: docker/setup-compose-action@v1
 
