--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "e2e"
   ],
   "scripts": {
-    "start": "docker-compose -f docker-compose.prod.yml up --build",
-    "dev": "docker-compose -f docker-compose.dev.yml up --build",
-    "stop": "docker-compose -f docker-compose.prod.yml down",
-    "stop:dev": "docker-compose -f docker-compose.dev.yml down",
+    "start": "docker compose -f docker-compose.prod.yml up --build",
+    "dev": "docker compose -f docker-compose.dev.yml up --build",
+    "stop": "docker compose -f docker-compose.prod.yml down",
+    "stop:dev": "docker compose -f docker-compose.dev.yml down",
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "npm run test:client && npm run test:server",
-    "test:client": "cd client && npm ci && npm test",
-    "test:server": "cd server && npm ci && npm test",
-    "test:e2e": "docker-compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from e2e",
-    "test:e2e:cleanup": "docker-compose -f docker-compose.test.yml down -v"
+    "test:client": "cd client && npm test",
+    "test:server": "cd server && npm test",
+    "test:e2e": "docker compose -f docker-compose.test.yml up --build --abort-on-container-exit --exit-code-from e2e",
+    "test:e2e:cleanup": "docker compose -f docker-compose.test.yml down -v"
   },
   "repository": {
     "type": "git",
