--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -44,7 +44,8 @@ services:
       - DB_NAME=todo_db
       - DB_LOGGING=false
     depends_on:
-      - db
+      - db:
+        condition: service_healthy
     networks:
       - todo-network
     restart: unless-stopped
@@ -57,6 +58,12 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=todo_db
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d todo_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
     networks:
       - todo-network
     restart: unless-stopped
