--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   nginx:
     image: nginx:alpine
@@ -44,7 +42,8 @@ services:
       - DB_NAME=todo_test_db
       - DB_LOGGING=false
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     networks:
       - todo-test-network
     restart: unless-stopped
@@ -57,6 +56,12 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=todo_test_db
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d todo_test_db"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+      start_period: 5s
     networks:
       - todo-test-network
     restart: unless-stopped
