--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,10 +1,10 @@
 services:
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     ports:
       - "80:80"
-    volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - client
       - server
