--- a/docker-compose.deploy.yml
+++ b/docker-compose.deploy.yml
@@ -1,10 +1,14 @@
 services:
   nginx:
-    image: nginx:alpine
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     ports:
       - "80:80"
+      - "443:443"
     volumes:
-      - ./nginx/local.conf:/etc/nginx/conf.d/default.conf
+      - /etc/letsencrypt/live/dev-todo.me/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/dev-todo.me/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
     depends_on:
       - client
       - server
