--- a/nginx/local.conf
+++ b/nginx/local.conf
@@ -1,27 +1,6 @@
 server {
     listen 80;
-    server_name dev-todo.me;
-    
-    # Redirect all HTTP requests to HTTPS
-    location / {
-        return 301 https://$host$request_uri;
-    }
-}
-
-server {
-    listen 443 ssl;
-    server_name dev-todo.me;
-
-    # SSL certificate files
-    ssl_certificate /etc/nginx/ssl/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
-
-    # SSL settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
+    server_name localhost;
 
     # Serve static client files for root path
     location / {
