--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,10 +1,10 @@
 services:
   nginx:
-    build:
-      context: ./nginx
-      dockerfile: Dockerfile
+    image: nginx:alpine
     ports:
       - "80:80"
+    volumes:
+      - ./nginx/local.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - client
       - server
